ECO-592: Update support plan upgrade template header styling (#52)
* Add ensime files to gitignore.

* Update header style for support plan upgrade template.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ target/
 .idea_modules
 application.conf
 src/main/resources/templates/examples.html
+.ensime
+.ensime_cache
+ensime-langserver.log
+pc.stdout.log
